get profile of clients and companies
