# src/main/kotlin/ru/kotleteri/data/models/base/ClientModel.kt
@@ -1,5 +1,6 @@
 package ru.kotleteri.data.models.base
 
+import ru.kotleteri.data.models.inout.clients.GetClientProfileResponseModel
 import java.util.*
 
 data class ClientModel(
@@ -8,4 +9,12 @@ data class ClientModel(
     val lastName: String,
     val email: String,
     val password: String
-)
+) {
+    fun getProfile() =
+        GetClientProfileResponseModel(
+            id.toString(),
+            firstName,
+            lastName,
+            email
+        )
+}
